prevent scroll when julianne flies out of screen

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ height:100%; margin:0; padding:0;
 
 body{
 		font-family: Helvetica, sans-serif;
+		overflow:hidden;
 }
 #header{
 	width:100%;
